<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.splash.SplashActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/consortium" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNomCommercant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nom_de_commercant"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"

        android:layout_width="match_parent"
        android:layout_height="120dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilNomCommercant"

        app:cardCornerRadius="10dp"
        app:cardElevation="15dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:textAlignment="center">


            //Iaspyx

            <ImageView
                android:id="@+id/imvIaspyx"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imvJasmalt"
                app:srcCompat="@drawable/i" />


            <TextView
                android:id="@+id/txtIaspyx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/imvIaspyx"
                app:layout_constraintStart_toStartOf="@+id/imvIaspyx"
                app:layout_constraintTop_toBottomOf="@+id/imvIaspyx"
                tools:text="000,00" />

            //Smiathil

            <ImageView
                android:id="@+id/imvSmiathil"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toStartOf="@+id/imvJasmalt"
                app:layout_constraintStart_toEndOf="@+id/imvIaspyx"
                app:layout_constraintTop_toTopOf="@+id/imvJasmalt"
                app:srcCompat="@drawable/sm" />


            <TextView
                android:id="@+id/txtSmiathil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/imvSmiathil"
                app:layout_constraintStart_toStartOf="@+id/imvSmiathil"
                app:layout_constraintTop_toBottomOf="@+id/imvSmiathil"
                tools:text="000,00" />

            //Jasmalt

            <ImageView
                android:id="@+id/imvJasmalt"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ja" />


            <TextView
                android:id="@+id/txtJasmalt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/imvJasmalt"
                app:layout_constraintStart_toStartOf="@+id/imvJasmalt"
                app:layout_constraintTop_toBottomOf="@+id/imvJasmalt"
                tools:text="000,00" />

            //Vethyx

            <ImageView
                android:id="@+id/imvVethyx"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toStartOf="@+id/imvBilerium"
                app:layout_constraintStart_toEndOf="@+id/imvJasmalt"
                app:layout_constraintTop_toTopOf="@+id/imvJasmalt"
                app:srcCompat="@drawable/ve" />


            <TextView
                android:id="@+id/txtVethyx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/imvVethyx"
                app:layout_constraintStart_toStartOf="@+id/imvVethyx"
                app:layout_constraintTop_toBottomOf="@+id/imvVethyx"
                tools:text="000,00" />

            //Bilerium

            <ImageView
                android:id="@+id/imvBilerium"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imvJasmalt"
                app:srcCompat="@drawable/b" />


            <TextView
                android:id="@+id/txtBilerium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/imvBilerium"
                app:layout_constraintStart_toStartOf="@+id/imvBilerium"
                app:layout_constraintTop_toBottomOf="@+id/imvBilerium"
                tools:text="000,00" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnOuvrir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:drawableLeft="@drawable/ic_baseline_door_sliding_24"
        android:text="@string/ouvrir"

        app:layout_constraintBottom_toTopOf="@+id/btnChargement"
        app:layout_constraintEnd_toEndOf="@+id/btnChargement"
        app:layout_constraintStart_toStartOf="@+id/btnChargement" />

    <Button
        android:id="@+id/btnChargement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="104dp"
        android:layout_marginEnd="104dp"

        android:drawableLeft="@drawable/ic_round_sync_24"
        android:text="@string/chargement"
        app:layout_constraintBottom_toTopOf="@+id/btnTeleverser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnTeleverser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="32dp"
        android:drawableLeft="@drawable/ic_baseline_cloud_upload_24"

        android:text="@string/televerser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnChargement"
        app:layout_constraintStart_toStartOf="@+id/btnChargement" />


</androidx.constraintlayout.widget.ConstraintLayout>